--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 BACKEND_URL=https://tough-terminally-koala.ngrok-free.app
 # BACKEND_URL=http://localhost:5011
+# BACKEND_URL=https://kumele.kelaxa.com
