--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-BACKEND_URL=https://tough-terminally-koala.ngrok-free.app
-# BACKEND_URL=http://localhost:5011
+BACKEND_URL=https://lightly-in-toad.ngrok-free.app
+# BACKEND_URL=https://tough-terminally-koala.ngrok-free.app
+# BACKEND_URL=http://192.168.1.12:5011
 # BACKEND_URL=https://kumele.kelaxa.com
